select fix bug example gap

--- a/src/assets/examples/select-optgroup/select-optgroup.component.css
+++ b/src/assets/examples/select-optgroup/select-optgroup.component.css
@@ -11,6 +11,7 @@
   font-family: 'Soleto Trial';
   font-size: 16px;
   line-height: 24px;
+  margin-bottom: 16px;
 }
 
 .first-one {
