--- a/src/assets/examples/select-reset/select-reset.component.css
+++ b/src/assets/examples/select-reset/select-reset.component.css
@@ -10,6 +10,7 @@
   color: #696969;
   font-size: 16px;
   line-height: 24px;
+  margin-bottom: 16px;
 }
 
 .first-one {
